- For the maps, fixed the year text in the titles to wrap together: "2014-15" and "2009-10" - Changed the tooltip fix to ensure all cases properly formatted the number changed using numberFormat to get the commas inserted in long numbers (1,234).  GC found a case the existing code would miss.

--- a/EnglishLearners/dev/assets/css/main.css
+++ b/EnglishLearners/dev/assets/css/main.css
@@ -45,6 +45,11 @@ body {
     -webkit-text-size-adjust: none;
 }
 
+.nowrap {
+	white-space: nowrap;
+}
+
+
 /* Box Model */
 
 *, *:before, *:after {
